--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ h1#greeting {
 }
 
 #todo-form input[type="text"] {
+  padding: 0.65rem 1.15rem;
   width: 30rem;
   font-size: 1.6rem;
   border: 1px solid #fff5;
@@ -101,11 +102,10 @@ h1#greeting {
 
 ul#todo-list {
   margin-top: 1.6rem;
-  height: 300px;
 }
 
 ul#todo-list li {
-  width: 30rem;
+  width: 28rem;
   margin-left: -1rem;
   margin-bottom: 0.4rem;
   padding: 0.65rem 0.65rem;
@@ -114,7 +114,22 @@ ul#todo-list li {
 
 ul#todo-list li span {
   font-size: 1.4rem;
-  margin-left: 0.75rem;
+  margin-left: 0.85rem;
+}
+
+ul#todo-list li button {
+  cursor: pointer;
+  position: relative;
+}
+
+ul#todo-list li button:hover::after {
+  content: "clear!";
+  background: #fffa;
+  color: #000a;
+  position: absolute;
+  top: 0.25rem;
+  left: -3.75rem;
+  padding: 0 0.25rem;
 }
 
 #quote {
