--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   width: 100vw;
   height: 100vh;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   padding: 6rem 5rem;
   display: flex;
   margin: 0 auto;
@@ -36,7 +36,7 @@ body {
 }
 
 input[type="text"] {
-  width: 15vw;
+  text-align: center;
   font-size: 1.5rem;
   background-color: transparent;
   color: #fff;
@@ -55,6 +55,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
+  cursor: pointer;
   background: #fffe;
   color: #000a;
 }
@@ -71,7 +72,7 @@ input:focus::placeholder {
 
 #login-form input[type="text"] {
   width: 16rem;
-  font-size: 1.2rem;
+  font-size: 1.25rem;
 }
 
 h1#greeting {
@@ -107,8 +108,8 @@ ul#todo-list {
 ul#todo-list li {
   width: 28rem;
   margin-left: -1rem;
-  margin-bottom: 0.4rem;
-  padding: 0.65rem 0.65rem;
+  margin-bottom: 0.5rem;
+  padding: 0.65rem 0.85rem;
   border-bottom: 1px solid #fffc;
 }
 
@@ -154,6 +155,16 @@ ul#todo-list li button:hover::after {
   position: fixed;
   width: auto;
   height: 100vh;
+}
+
+#dimmed {
+  background: #000;
+  position: fixed;
+  opacity: 0.1;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 #weather {
